5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1723_2508.log
== TEST (2019-05-14 10:46:57) 
-- CODE:
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(t<n):
	s=s+((4/(i*(i+1)*(i+2))*(-1)**t
	i=i+2
	t=t+1
print(s)
-- ERROR:
File "XXXX", line 7
    i=i+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:20) 
-- CODE:
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(t<n):
	s=s+((4/(i*(i+1)*(i+2))))*(-1)**t
	i=i+2
	t=t+1
print(s)
-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:36) 
-- CODE:
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(t<=n):
	s=s+((4/(i*(i+1)*(i+2))))*(-1)**t
	i=i+2
	t=t+1
print(s)
-- OUTPUT:
3.1408813408813407
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:47) 
-- CODE:
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(t<=n):
	s=s+((4/(i*(i+1)*(i+2))))*(-1)**t
	i=i+2
	t=t+1
print(s)
-- OUTPUT:
3.1408813408813407
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:58) 
-- CODE:
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(t<n):
	s=s+((4/(i*(i+1)*(i+2))))*(-1)**t
	i=i+2
	t=t+1
print(s)
-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:49:36) 
-- CODE:
from math import*&
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(n>1):
	s=s+((4/(i*(i+1)*(i+2))))*(-1)**t
	i=i+2
	t=t+1
	n=n-1
print(round(s,8))
-- EXECUTION TIME:
0.172374
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 1
    from math import*&
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:49:58) 
-- CODE:
from math import*&
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(n>1):
	s=s+(4/(i*(i+1)*(i+2)))*(-1)**t
	i=i+2
	t=t+1
	n=n-1
print(round(s,8))
-- EXECUTION TIME:
0.156206
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 1
    from math import*&
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:06) 
-- CODE:
from math import*&
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(n>1):
	s=s+(4/(i*(i+1)*(i+2)))*(-1)**t
	i=i+2
	t=t+1
	n=n-1
print(round(s,8))
-- ERROR:
File "XXXX", line 1
    from math import*&
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:50:11) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
i=2
s=3
t=0
while(n>1):
	s=s+(4/(i*(i+1)*(i+2)))*(-1)**t
	i=i+2
	t=t+1
	n=n-1
print(round(s,8))
-- EXECUTION TIME:
0.198888
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
